# expando

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROMPT_SESSIONE.md  README.md  ROADMAP.md  SECURITY.md  appcast.xml  install.sh  pyproject.toml  requirements.txt  sparkle-benchmark-history.json
.github/workflows/: ci.yml  e2e-nightly.yml  e2e-self-hosted.yml  hub-maintainer-sync.yml  notarization-audit.yml  pages.yml  release.yml
Formula/: expando.rb
assets/: AppIcon.icns
default_config/config/: default.yml  terminal.yml
default_config/match/: base.yml  dev.yml
default_config/plugins/: README.md  example.py
docs/: ARCHITECTURE.md  E2E_RUNNERS.md  E2E_SELF_HOSTED.md  HUB_MARKETPLACE.md  NOTARIZATION_AUDIT.md  PLUGINS.md  RELEASE.md  SYNC.md  TROUBLESHOOTING.md  YAML_REFERENCE.md  doctor-health.html  hub-maintainer.html  hub-marketplace.html  hub-trigger-suggestions.html  index.html
docs/hub/: community-validation.json  doctor-full.json  index.json  marketplace.json
expando/: CHANGELOG.md  PROMPT_SESSIONE.md
expando/SCRATCH/: changes_after_fixes.txt  critical_points_fixes.md  pytest_full.txt  vp_core_exercises.txt  vp_core_functions.txt  vp_extras.txt  vp_pytest_targeted.txt  vp_shellcheck.txt  vp_verify_dist.txt  vp_verify_goal_ac.txt
expando/docs/: ARCHITECTURE.md
expando/scripts/: build-macos-app.sh  distribution-launcher.sh  embed-distribution-python.sh  repair-installed-app.sh  verify-distribution-bundle.sh
expando/tests/: test_app_context.py  test_app_context_fast.py  test_daemon.py  test_engine_app.py  test_engine_image.py  test_engine_snooze.py  test_fuzzy.py
scripts/: build-dmg.sh  build-macos-app.sh  bump-homebrew-cask.sh  codesign-app.sh  com.andreapostiglione.expando.plist  com.inochisrl.expando.plist  distribution-launcher.sh  embed-distribution-python.sh  embed-sparkle.sh  entitlements.plist  expando-launcher.c  generate-appcast.sh  generate-menubar-template.py  install-launch-agent.sh  launch-expando.sh  notarize-dmg.sh  push-homebrew-tap-pr.sh  repair-installed-app.sh  run-e2e.sh  setup-github-secrets.sh  soak-health-check.sh  sparkle-helper.m  uninstall-launch-agent.sh  verify-distribution-bundle.sh
src/expando/: __init__.py  app_context.py  atomic_io.py  auto_backup.py  backup.py  benchmark.py  block_notifications.py  brand_assets.py  changelog.py  cli.py  cli_output.py  config.py  config_reload_gate.py  crash_loop.py  crash_reporting.py  daemon.py  doctor_checks.py  doctor_repair.py  engine.py  espanso_compat.py  espanso_import.py  espanso_migrate.py  expansion_stats.py  external_import.py  forms.py  fuzzy.py  health.py  hotkeys.py  hub.py  hub_marketplace.py  i18n.py  image_paths.py  injection_degradation.py  injection_probe.py  injector.py  listener.py  listener_watchdog.py  lock.py  log_viewer.py  logging_setup.py  (+48 more)
tests/: conftest.py  test_app_context.py  test_app_context_fast.py  test_app_context_focus.py  test_app_context_fresh.py  test_auto_backup.py  test_backup.py  test_backup_list.py  test_backup_restore_rollback.py  test_benchmark.py  test_benchmark_sparkle.py  test_block_notifications.py  test_changelog.py  test_cli_daemon.py  test_clipboard_permissions.py  test_config.py  test_config_reload_gate.py  test_crash_loop.py  test_crash_reporting.py  test_daemon.py  test_distribution_bundle.py  test_doctor.py  test_doctor_combined.py  test_doctor_full.py  test_doctor_full_html.py  test_doctor_marketplace.py  test_doctor_marketplace_json.py  test_doctor_notarization_history.py  test_doctor_repair.py  test_doctor_repair_launch_agent.py  test_doctor_v2.py  test_engine_app.py  test_engine_ignore_case.py  test_engine_tier2.py  test_espanso_import.py  test_espanso_migrate.py  test_expansion_stats.py  test_external_import.py  test_fuzzy.py  test_fuzzy_search_terms.py  (+77 more)
tests/e2e/: conftest.py  helpers.py  test_editor_smoke.py  test_image_clipboard_macos.py  test_keyboard_macos.py  test_listener_watchdog_restart.py  (+2 more)
(+20 files in other folders)
