[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expando"
version = "0.1.0"
description = "A privacy-first, cross-platform text expander — Espanso-compatible clone"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrea Postiglione" }]
dependencies = [
    "click>=8.1",
    "pynput>=1.7",
    "PyYAML>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
expando = "expando.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]