[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expando"
version = "3.29.20"
description = "A privacy-first, open-source text expander for macOS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrea Postiglione" }]
dependencies = [
    "click>=8.4.2",
    "pynput>=1.7",
    "PyYAML>=6.0",
    "watchdog>=3.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "Pillow>=10.0"]

[project.scripts]
expando = "expando.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"default_config/config" = [
    "default_config/config/default.yml",
    "default_config/config/terminal.yml",
]
"default_config/match" = [
    "default_config/match/base.yml",
    "default_config/match/dev.yml",
]
"default_config/match/packages/core" = ["default_config/match/packages/core/snippets.yml"]
"default_config/match/packages/dev" = ["default_config/match/packages/dev/snippets.yml"]
"default_config/match/packages/email-it" = ["default_config/match/packages/email-it/snippets.yml"]
"default_config/match/packages/legal-it" = ["default_config/match/packages/legal-it/snippets.yml"]
"default_config/match/packages/medical-it" = [
    "default_config/match/packages/medical-it/hub.json",
    "default_config/match/packages/medical-it/snippets.yml",
]
"default_config/match/packages/sales-it" = [
    "default_config/match/packages/sales-it/hub.json",
    "default_config/match/packages/sales-it/snippets.yml",
]
"default_config/match/packages/social" = [
    "default_config/match/packages/social/hub.json",
    "default_config/match/packages/social/snippets.yml",
]
"default_config/match/packages/support-it" = [
    "default_config/match/packages/support-it/hub.json",
    "default_config/match/packages/support-it/snippets.yml",
]
"default_config/plugins" = [
    "default_config/plugins/README.md",
    "default_config/plugins/example.py",
]
"packages/hub" = [
    "packages/hub/index.json",
    "packages/hub/marketplace.json",
]
"scripts" = [
    "scripts/com.andreapostiglione.expando.plist",
    "scripts/entitlements.plist",
    "scripts/install-launch-agent.sh",
    "scripts/launch-expando.sh",
    "scripts/uninstall-launch-agent.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests; macOS injection tests need Accessibility permission",
]
